# bibfish

./: CONTRIBUTING.md  HISTORY.md  LICENSE.md  README.md  pyproject.toml  setup.py
bibfish/: __init__.py
tests/: bibfile1.bib  bibfile2.bib  expected_output1.bib  manuscript1.tex  test_init.py  test_main.py
