[build-system]
requires = ["setuptools>=69", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "bibfish"
authors = [
  { name="Jon Carr", email="jon.carr@rhul.ac.uk" },
]
description = "Extract entries from a .bib file that are cited in a .tex file"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.md"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Topic :: Text Processing :: Markup :: LaTeX",
]
requires-python = ">=3.8"
dependencies = [
  "bibtexparser==1.4.2",
]

[dependency-groups]
dev = [
  "black>=20.0",
  "build>=1.2",
  "pytest>=8.3.5",
  "twine==6.0.1",
]

[project.urls]
Homepage = "https://github.com/jwcarr/bibfish"

[project.scripts]
bibfish = "bibfish:cli"

[tool.setuptools]
packages = ["bibfish"]

[tool.setuptools_scm]
version_file = "bibfish/_version.py"
version_file_template = '__version__ = "{version}"'
